# Entity-Component-System-Rtype

./: CMakeLists.txt  README.md  conanfile.txt
Docs/UML/: class diagram rtype.mdj
Docs/server/: RFC918273645
client/include/: ClassClient.hpp  clientInclude.hpp  client_sys.hpp  r-type.hpp
client/src/: ClassClient.cpp  client_sys.cpp  main.cpp  r-type.cpp
engine/include/: Game.hpp  IEntity.hpp  componentArray.hpp  componentManager.hpp  coordinator.hpp  defines.hpp  entityManager.hpp  system.hpp  systemManager.hpp
engine/include/components/: colliderComponent.hpp  spriteComponent.hpp  transformComponent.hpp
engine/include/systems/: colliderSystem.hpp  spriteSystem.hpp  transformSystem.hpp
engine/src/: Game.cpp  componentArray.cpp  componentManager.cpp  coordinator.cpp  entityManager.cpp  systemManager.cpp
engine/src/systems/: ColliderSystem.cpp  spriteSystem.cpp  transformSystem.cpp
server/include/: ClassServer.hpp  server.hpp  server_sys.hpp
server/src/: ClassServer.cpp  main.cpp  server_sys.cpp
